Fixed the Drop-Down alignment and Button Design (#46)

--- a/css/main.scss
+++ b/css/main.scss
@@ -21,8 +21,8 @@ $slider-height: 248px;
 * {
   font-family: "IBM Plex Sans", sans-serif;
   font-size: 16px;
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 
 html, body {
@@ -1695,10 +1695,8 @@ ul {
 .cta {
   width: auto;
   margin: 24px 0 !important;
-  padding-left: 24px;
   border-radius: 4px;
   border-left: 1px solid var(--app-sidebar-border-color);
-  margin-bottom: 40px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1740,7 +1738,6 @@ ul {
       display: flex;
       flex-direction: column;
       align-items: center;
-      //   padding: 40px 0;
       .h2-margin {
         margin-bottom: 24px;
       }
@@ -1792,9 +1789,9 @@ ul {
   }
 }
 fieldset {
-  width: 80%;
-  margin: 0 auto;
   border: none;
+  padding: 0rem;
+  width: 80%;
 
   input[type="text"] {
     width: 60%;
@@ -1855,9 +1852,9 @@ fieldset {
 textarea {
   width: calc(100% - 16px);
   min-height: 119px;
-  padding: 10px;
   border-radius: 4px;
   border: solid 1px #d6dadb;
+  margin-top: 1.5rem;
 }
 
 .json-btn-wrapper {
@@ -2463,6 +2460,7 @@ pre,
 textarea {
   font-size: 16px;
   resize: none;
+
 }
 code,
 pre p {
@@ -2572,6 +2570,7 @@ pre {
   &-page-wrapper {
     display: flex;
     width: 95%;
+    gap:2rem;
 
     @media (max-width: 480px) {
       width: 100%;
@@ -2591,8 +2590,6 @@ pre {
     .playground-box {
       border-radius: 6px;
       border: none;
-      padding: 24px 24px 82px 24px;
-      margin-bottom: 40px;
       position: relative;
 
       #playground-console {
@@ -2653,12 +2650,11 @@ pre {
 
       textarea {
         min-height: 200px;
-        padding: 10px 12px;
         border: 1px solid #D6DADB;
         border-radius: 4px;
         color: #5D5381;
         resize: none;
-
+        padding-top: 1rem;
         @media (max-width: 480px) {
           font-size: 14px;
         }
@@ -2670,18 +2666,19 @@ pre {
       flex-wrap: nowrap;
       border-radius: 4px;
       background-color: #f8fafb;
-      padding: 0px 24px;
-      margin-bottom: 48px;
+      padding: 0rem 2rem 0rem 0.5rem;
       margin-top: 16px;
+      justify-content: space-between;
+      box-sizing: border-box;
+      gap:1rem;
+      
 
       fieldset {
         display: flex;
         flex-wrap: nowrap;
         align-items: center;
-        margin-right: 24px;
-        margin: 0 24px 0 0;
         justify-content: flex-start;
-        min-width: calc(60% + 10px);
+        min-width: 60%;
 
         input[type="text"] {
           border: 1px solid #D6DADB;
@@ -2704,8 +2701,8 @@ pre {
         flex-direction: column;
         flex-wrap: nowrap;
         font-size: 14px;
-        width: 70%;
         margin-bottom: unset;
+        white-space: nowrap;
 
         .title {
           font-weight: bold;
@@ -2736,6 +2733,9 @@ pre {
     display: flex;
     flex-direction: column;
     width: 50%;
+    @media(max-width:1440) {
+      padding-left: 25px;
+    }
   }
 
   fieldset {
